add booking trips by client and passenger
