# backend-laravel/app/Models/Trip.php
@@ -5,6 +5,9 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use App\Models\Path;
+use App\Models\Client;
+use App\Models\Passenger;
+use App\Models\Organization;
 class Trip extends Model
 {
     use HasFactory;
@@ -19,5 +22,14 @@ class Trip extends Model
     ];
     public function path() {
         return $this->belongsTo(Path::class);
+    }
+    public function clients() {
+        return $this->belongsToMany(Client::class, 'bookings');
+    }
+    public function passengers() {
+        return $this->belongsToMany(Passenger::class, 'bookings');
+    }
+    public function organization() {
+        return $this->belongsTo(Organization::class);
     }
 }
